--- a/equipofutbol/src/app/page.module.css
+++ b/equipofutbol/src/app/page.module.css
@@ -30,9 +30,17 @@
 .main {
   display: flex;
   flex-direction: column;
+  gap: 32px;
+  grid-row-start: 2;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding:
+    6rem;
   min-height: 100vh;
 }
 
@@ -41,7 +49,7 @@
   padding: 0;
 }
 
-.list{
+.list {
   margin-bottom: 5px;
 }
 
@@ -51,7 +59,8 @@
   border-top: 1px solid #ccc;
 }
 
-.nameclub{
+
+.nameclub {
   margin: 20px 0;
   border: 0;
   border-top: 1px solid rgb(29, 84, 185);
