--- a/sumaryrestar/src/app/page.module.css
+++ b/sumaryrestar/src/app/page.module.css
@@ -30,9 +30,17 @@
 .main {
   display: flex;
   flex-direction: column;
+  gap: 32px;
+  grid-row-start: 2;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding:
+    6rem;
   min-height: 100vh;
 }
 
@@ -44,16 +52,6 @@
   border-radius:
     5px;
   background-color: #fff;
-}
-
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
 }
 
 .numeros {
@@ -85,7 +83,16 @@
 .resultado {
   margin-top: 10px;
   font-weight: bold;
-  color: black;
+}
+
+.main ol {
+  font-family: var(--font-geist-mono);
+  padding-left: 0;
+  margin: 0;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: -0.01em;
+  list-style-position: inside;
 }
 
 .main li:not(:last-of-type) {
